; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_ext2fs_xattrs_flags.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_ext2fs_xattrs_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_xattr_handle = type { i32 }

@EXT2_ET_MAGIC_EA_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_xattrs_flags(%struct.ext2_xattr_handle* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.ext2_xattr_handle*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.ext2_xattr_handle* %0, %struct.ext2_xattr_handle** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.ext2_xattr_handle*, %struct.ext2_xattr_handle** %4, align 8
  %8 = load i32, i32* @EXT2_ET_MAGIC_EA_HANDLE, align 4
  %9 = call i32 @EXT2_CHECK_MAGIC(%struct.ext2_xattr_handle* %7, i32 %8)
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.ext2_xattr_handle*, %struct.ext2_xattr_handle** %4, align 8
  %14 = getelementptr inbounds %struct.ext2_xattr_handle, %struct.ext2_xattr_handle* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %6, align 8
  store i32 %15, i32* %16, align 4
  br label %17

17:                                               ; preds = %12, %3
  %18 = load i32*, i32** %5, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.ext2_xattr_handle*, %struct.ext2_xattr_handle** %4, align 8
  %24 = getelementptr inbounds %struct.ext2_xattr_handle, %struct.ext2_xattr_handle* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  br label %25

25:                                               ; preds = %20, %17
  ret i32 0
}

declare dso_local i32 @EXT2_CHECK_MAGIC(%struct.ext2_xattr_handle*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
